--- a/404-page.html
+++ b/404-page.html
@@ -125,7 +125,18 @@
                         <img src="https://www.casinofreak.com/files/img/social_g.png" width="70" height="34" alt=""/>
                     </a>
                 </div>
-            </nav>
+            </nav>.::_BG {
+            border-radius: 50%;
+            background-color: rgba(255, 255, 255, 0);
+            box-shadow: inset 0 0 10.5px 4.5px rgba(255, 84, 84, 0.3);
+            position: absolute;
+            left: 917px;
+            top: 61px;
+            width: 80px;
+            height: 80px;
+            z-index: 62;
+            }
+
         </div>
     </header>
     <div class="site__content">
@@ -173,7 +184,6 @@
                 <a href="https://www.casinofreak.com/contact-us">Contact Us</a>
                 <a href="https://www.casinofreak.com/privacy.php">Privacy Policy</a>
             </div>
-
 
             <span class="footer-monkey"></span>
             <span class="footer-logo"></span>
